tests/toylang/neg/001446_mutation.toylang
program a = { var a : int then; } .
